# aLog

./: .clangd  .gitignore  README.md  aLog_project.code-workspace
.devcontainer/: devcontainer.json
components/mono_fonts/: CMakeLists.txt  font_8x8_uk.c  fonts.h
docs/: sd-card-pinout.md
firmware/: .clangd  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/ads1115_drv/: CMakeLists.txt  ads1115_drv.c  ads1115_drv.h
firmware/components/ds1307_drv/: CMakeLists.txt  ds1307_drv.c  ds1307_drv.h
firmware/components/gfx/: CMakeLists.txt  gfx.c  gfx.h
firmware/components/mono_fonts/: CMakeLists.txt  font_mono_8x8uk.c  fonts.h
firmware/components/sd_spi_drv/: CMakeLists.txt  sd_spi_drv.c  sd_spi_drv.h
firmware/components/ssd1306_drv/: CMakeLists.txt  ssd1306_drv.c  ssd1306_drv.h
firmware/components/wifi_app/: CMakeLists.txt  wifi_app.c  wifi_app.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  external_storage.c  external_storage.h  internal_storage.c  internal_storage.h  main.c  main.h  system_state.c  system_state.h  system_storage.c  system_storage.h  system_time.c  system_time.h  web_server.c  web_server.h
firmware/main/system_tasks/: adc_task.c  adc_task.h  lcd_task.c  lcd_task.h  log_task.c  log_task.h  pwr_task.c  pwr_task.h  tasks_list.h  time_task.c  time_task.h  udp_task.c  udp_task.h  wifi_task.c  wifi_task.h
firmware/storage/: index.html
firmware/web_src/: dashboard.html  script.js  template.html
main/: CMakeLists.txt  main.c  setup.h  ssd1306.c  ssd1306.h
telemetry/: .env.example  .gitignore  README.md  docker-compose.yml  run.sh  telegraf.conf
telemetry/grafana/: grafana.ini
telemetry/grafana/provisioning/dashboards/: alog_dashboard.json  dashboards.yaml
tools/: README.md  assemble_web.py  setup_udev.sh
web_src/: logs.html  script.js  settings.html  style.css  template.html
(+1 files in other folders)
